Declaring new block version.